# map-to-const

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
examples/: README.md  my_example.rs  simple.rs  with_const_name.rs
src/: lib.rs
