[package]
name = "map-to-const"
version = "0.2.0"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
description = "Easily convert HashMap<K, V> to constant [(K, V); N] values."
documentation = "https://docs.rs/map-to-const"
repository = "https://github.com/rnag/map-to-const"
readme = "README.md"
keywords = ["hashmap", "const", "constants", "compile-time", "build"]
categories = ["accessibility", "config", "development-tools::build-utils"]
license = "MIT"
edition = "2021"
exclude = []

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ cargo install cargo-bump
# cargo-bump = "1.1.0"
# logging utilities
log = "^0.4"
sensible-env-logger = "^0.2"
indoc = "1.0.4"

### FEATURES #################################################################

[features]
